# PolyML

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
polyml/: __init__.py  cli.py  config.py  fees.py  runner.py
polyml/analysis/: __init__.py  features.py  learner.py  outcomes.py
polyml/api/: __init__.py  auth.py  rest.py  websocket.py
polyml/collectors/: __init__.py  account_collector.py  market_collector.py
polyml/mirror/: __init__.py  activity_mirror.py
polyml/session/: __init__.py  manager.py
polyml/storage/: __init__.py  db.py  models.py
polyml/trading/: __init__.py  backtest.py  engine.py  executor.py  fees.py  paper.py  strategy.py
scripts/: seed_demo.py
tests/: test_auth.py  test_engine.py  test_executor.py  test_fees.py  test_learner.py  test_live_shapes.py  test_models.py  test_paper.py  test_shutdown.py  test_storage_session.py  test_strategy.py
